<resources>
    <string name="app_name">SuperHero Index</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="hero_image">Hero Image</string>
    <string name="empty_list_text">Nothing here Hit SEARCH First...</string>
    <string name="enter_name_hint">SuperHero Name</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aliases">Aliases :</string>
    <string name="durability">Durability</string>
    <string name="combat">Combat</string>
    <string name="first_appearance">First Appearance :</string>
    <string name="affiliated_groups">Affiliated Groups :</string>
    <string name="_20">20</string>
    <string name="_40">40</string>
    <string name="_60">60</string>
    <string name="_80">80</string>
    <string name="_90">90</string>
    <string name="_100">100</string>
</resources>