<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="1dp"
    card_view:cardMaxElevation="1dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true"
    android:padding="8dp"
    card_view:cardBackgroundColor="@color/grey">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/humanNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/holo_green_dark"/>

        <TextView
            android:id="@+id/heroNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/humanNameTextView"
            card_view:layout_constraintTop_toBottomOf="@+id/humanNameTextView"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/strengthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/strength"
            card_view:layout_constraintStart_toStartOf="@+id/heroNameTextView"
            card_view:layout_constraintTop_toBottomOf="@+id/heroNameTextView"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/intelligenceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/intelligence"
            card_view:layout_constraintStart_toStartOf="@+id/speedTextView"
            card_view:layout_constraintTop_toBottomOf="@+id/speedTextView"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/speed"
            android:textColor="@color/black"
            card_view:layout_constraintStart_toStartOf="@+id/strengthTextView"
            card_view:layout_constraintTop_toBottomOf="@+id/strengthTextView" />

        <TextView
            android:id="@+id/strengthValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/black"
            card_view:layout_constraintStart_toStartOf="@+id/intelligenceValueTextView"
            card_view:layout_constraintTop_toTopOf="@+id/strengthTextView"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/speedValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/black"
            card_view:layout_constraintStart_toStartOf="@+id/intelligenceValueTextView"
            card_view:layout_constraintTop_toTopOf="@+id/speedTextView"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/intelligenceValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            android:textColor="@color/black"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/intelligenceTextView"
            card_view:layout_constraintTop_toTopOf="@+id/intelligenceTextView"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/heroImageView"
            android:layout_width="84dp"
            android:layout_height="0dp"
            android:contentDescription="@string/hero_image"
            android:src="@drawable/superman"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.8"
            card_view:layout_constraintStart_toEndOf="@+id/intelligenceValueTextView"
            card_view:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>